# icon-browser

./: flake.nix  meson.build  package-lock.json  package.json  tsconfig.json
data/: dev.aylur.icon-browser.in.gschema.xml  meson.build
src/: App.tsx  env.d.ts  main.ts
src/lib/: icon.ts  settings.ts
src/widget/: IconBox.tsx  IconItem.tsx  Preferences.tsx  Window.tsx
